trunk/media/styles/faads-search.css
.field-wrapper { clear: left;}

#faads-search-form h4 { clear: left; /*border-bottom: 1px solid #ccc;*/}
#faads-search-form .section { border-bottom: 1px solid #ccc; margin: 0 0 20px 0; padding: 0 0 20px 0;}
#faads-search-form .section.last { border-bottom: 0;}
#faads-search-form .clear-left { clear: left; }
#faads-search-form .clear-right { clear: right; }
#faads-search-form .section#range { padding-bottom: 1em;}

#faads-search-form ul { margin-bottom: 0;}

#text-query-text-wrapper input#id_text_query
{
  width: 640px;
  font-size: 1.1em;
margin-right: 20px;
}

#text-query-type-wrapper ul
{
  margin-left: 0; 
  margin-bottom: 0;
  padding-left: 0;
  margin-top: 10px;
}

#text-query-type-wrapper ul li 
{ 
  margin-left: 0;
  padding-left: 0;
  list-style-type: none;
  display: inline;
  font-size: 0.8em;
}

.cfda-float
{
  float: left;
}

#obligation-date-wrapper { padding-right: 50px;}
#obligation-date-wrapper, obligation-amount-wrapper { float: left;}


#cfda-programs { width: 250px; }
#cfda-or { width: 50px; text-align: center; padding: 0px 20px; font-style: italic;}
#cfda-tags { width: 231px; }
#cfda-tags select { width: 230px;}

#assistance-action-recipient-wrapper{
	width: 640px;
	height: 360px;
}

#assistance-action-recipient-wrapper .dropdown-wrapper
{
	padding-right: 50px;
	margin-bottom: 20px;
}

#id_tags
{
  padding: 3px;
}

#faads-search-results { width: 660px; font-size: 12px;}
#faads-search-results th, #faads-search-results td { border-right: ; padding: 3px}
#faads-search-results .last { }
#faads-search-results th { font-weight: bold; text-align: left; vertical-align: middle; padding-right: 11px;}


#faads-search-results th { font-weight: bold; text-align: center; vertical-align: middle; font-size: 0.9em;}

#faads-search-results thead tr .header {
	background-image: url(/media/images/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
}

#faads-search-results thead tr .headerAsc {
	background-image: url(/media/images/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
	background-image: url(/media/images/asc.gif);
}

#faads-search-results thead tr .headerDesc {
	background-image: url(/media/images/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
	background-image: url(/media/images/desc.gif);
}


#faads-search-results td { font-size: 0.9em;}
#faads-search-results tr.odd td { background-color: #f0f0f0;}
#faads-search-results td.amount { text-align: right;}
#faads-search-results td.cfda-program,#faads-search-results td.obligation-date { text-align: center;}


#no-faads-results-found {
    font-size: 1.8em;
    display: block;
    text-align: center;
    padding: 20px;
    border: 1px solid #c22;
    background-color: #fff0f0;
    color: #c22;
    margin: 0 auto;
    width: 60%;
}

.pagination {text-align: center; margin-top: 20px; display: block; margin-left: auto; margin-right: auto;}
.pagination-block { text-align: center; font-size: ; margin-top: 0;}
.pagination .current { padding: 10px 20px 0 20px; text-align: center;  display: block; clear: left}
.step-links .disabled, .step-links a { padding: 0 10px; display: inline;}
.step-links .disabled { color: #888; display: inline;}
 

#tabs ul { margin-bottom: 0px;}
#tabs ul, #tabs ul li { margin-left: 0;}
#tabs ul li { font-size: 0.8em;}

.faads-search-submit, #reset-faads-search { font-size: 1.5em; float: right; margin-right: 20px;}
#reset-faads-search { float: left; margin-left: 15px;}
#faads-search-submit-top { float: right; margin-top: 0;}
.faads-search-submit{
	background: url('../images/button_search.png') left top no-repeat;
	text-indent: -9999em;
	width: 95px;
	height: 40px;
	border: 0;
}
.faads-search-submit:hover{
	background: url('../images/button_search.png') left bottom no-repeat;
	border: 0;
}
#reset-faads-search{
	background: url('../images/reset-search.png') left top no-repeat;
	text-indent: -9999em;
	width: 140px;
	height: 40px;
	border: 0;
}
#reset-faads-search:hover{
	background: url('../images/reset-search.png') left bottom no-repeat;
	border: 0;
}

#faads-search-form ul, #faads-search-form ul li { margin-left: 0;, font-size: 100%; list-style-type: none} 
#faads-search-form ul li label { font-size: 11px; margin-bottom: 5px; font-weight: normal;}

#program-selector-text, #location-selector-text { float: left;}
#program-selector, #location-selector { float: left;}
#program-selector ul, #program-selector ul li, #location-selector ul, #location-selector ul li { font-size: 100%; display:inline; margin-left: 0;}

#program-selection-program ul { width: 48%; -moz-column-count:2;
-webkit-column-count: 2;
-moz-column-gap: 20px
-webkit-column-gap: 20px
-moz-column-rule: none;
-webkit-column-rule: none;
width: 640px}
#program-selection-program ul, #program-selection-program ul li, #program-selection-program ul li label { margin-left: 0; font-weight: normal; }
#program-selection-program ul li { clear: left; list-style-type: none;	display: block;}
#program-selection-program ul li label input { margin-right: 5px;}
#program-selection-program .program-title { width: 390px; padding-top: 6px; line-height: 98%;}
#program-selection-program ul li label input { display: block; float: left;}
#program-selection-program .program-title { display: block; }

#program-selection-tag ul { float: left; padding-left: 0; margin: 0 0 0 60px; }
#program-selection-tag ul li, #program-selection-tag ul li label { margin-left: 0; font-weight: normal; }
#program-selection-tag ul li label { font-size: 11px;}

#program-selection-subsector ul { float: left; margin: 0 0 0 60px;}
#program-selection-subsector ul li, #program-selection-subsector ul li label { margin-left: 0; font-weight: normal; font-size: 11px;}
#program-selection-subsector label .img-wrapper { padding-left: 28px; height: 20px; padding-top:5px;}
#program-selection-subsector label .img-wrapper#img-wrapper-maritime { background: url(/media/images/sector_icons/transportation/transportation_maritime.png) -7px 2px no-repeat;}
#program-selection-subsector label .img-wrapper#img-wrapper-aviation {background: url(/media/images/sector_icons/transportation/transportation_aviation.png) -7px 2px no-repeat; }
#program-selection-subsector label .img-wrapper#img-wrapper-other { background: url(/media/images/sector_icons/transportation/transportation_other.png) -1px 2px no-repeat;}
#program-selection-subsector label .img-wrapper#img-wrapper-rail { background: url(/media/images/sector_icons/transportation/transportation_rail.png) -10px 2px no-repeat;}
#program-selection-subsector label .img-wrapper#img-wrapper-transit { background: url(/media/images/sector_icons/transportation/transportation_transit.png) -7px 2px no-repeat;}
#program-selection-subsector label .img-wrapper#img-wrapper-highways { background: url(/media/images/sector_icons/transportation/transportation_highways.png) -7px 2px no-repeat; }

#assistance-action-recipient-wrapper .dropdown-wrapper ul, #assistance-action-recipient-wrapper .dropdown-wrapper ul li { margin-left: 0; width:185px; list-style-type: none}
#assistance-action-recipient-wrapper .dropdown-wrapper ul li { font-weight: normal; }

fieldset legend { padding-right: 18px !important; cursor: pointer; margin-top:2px; }
fieldset#advanced-options legend { }
fieldset#advanced-options.collapsed legend { }
fieldset#advanced-options legend a.state { font-size: 11px;  }

fieldset.collapsed * { display: none; }
fieldset.collapsed .program-selection-target { display: none !important;}
fieldset.collapsed legend { display: block !important; margin-left: 1px; }
fieldset.collapsed a.state { display: inline !important; }
fieldset.collapsed { border: 0; border-top: 1px solid #CCCCCC; padding-bottom: 0; /*background-position: 8px right;*/}

#program-selection-program .cfda-program-details {visibility: hidden; float: right;}
#program-selection-program li .program-title { padding-bottom: 5px;}
#program-selection-program li:hover .cfda-program-details { visibility: visible; margin-right: 7px;}
#program-selection-program ul li:hover .program-title { background-color: #eee !important;}

/* state selection */
#location .state-choices ul{ 
width: 144px;
float: left;
margin-left: 0;
}
#assistance-action-recipient-wrapper #recipient-type { padding-right: 0;}
#assistance-action-recipient-wrapper #recipient-type ul { margin-right: 1em;}

#summary-container #ajax-loader { margin: 0 auto; display: block; padding: 30px 0;}
table.summary-data { width: 876px; font-size: 10px;}
table.summary-data th, table.summary-data td { border-right: 0;}
table.summary-data th { font-weight: bold; text-align: center; vertical-align: middle;}
table.summary-data td { font-size: 0.9em; padding: 0.8em 0 0.8em 0.8em; text-align: right;}
table.summary-data tr.top td { text-align: left; border-bottom: 0; border-right: 1px solid #ccc; padding-bottom: 0;}
table.summary-data tr.bottom td { padding-top: 0;}
table.summary-data td a:link, table.summary-data td a:active, table.summary-data td a:visited { text-decoration: none;}
table.summary-data td a:hover { text-decoration: underline; }
table.summary-data td.first { text-align: left;}
table.summary-data .last { border-right: 1px solid #ccc; padding-right: 0.8em;}
table.summary-data tr.odd td { background-color: #f0f0f0;}
table.summary-data td.amount { text-align: right;}
table.summary-data td.cfda-program,table.summary-data td.obligation-date { text-align: center;}
table.summary-data .null-value { text-align: center; }
.summary-container .clear. .summary-container table, .summary-container h4 { clear: left;}
.summary-csv { float: right;}
.summary-csv a { padding: 5px 0 5px 25px; background: url(../images/download_icon_smaller.png) 0 6px no-repeat;}

#screencast-link-container { float: right; padding-left: 25px; padding-top: 2px; text-decoration:none; height: 20px; font-size: 10px; margin-right: 20px; background: url(/media/images/screencast_small_icon.png) top left no-repeat; }

#id_obligation_date_start, #id_obligation_date_end, #id_obligation_amount_minimum, #id_obligation_amount_maximum{
	width: 120px;
}
.range{
	margin: 0 10px;
}

#tabs{
	margin-top: 40px;
}
.dropdown-wrapper{
	float: left;
	width: 295px;
}

#summary-container{
	width: 660px;
	overflow-x: scroll;
	overflow-y: visible;
	height: 100%;
}

#state-summary-container{
	width: 660px;
	overflow-x: scroll;
	overflow-y: visible;
	height: 100%;
}

#summary-state-data{
	width: 660px;
}

#program-summary-container{
	width: 660px;
	overflow-x: scroll;
	overflow-y: hidden;
	height: 100%;
}

